# rust_particle_system

./: Cargo.toml  README.md
src/: main.rs  test_scripts.rs
src/solver/: assemble_initial_condition.rs  exponential_distribution.rs  graph.rs  ips_rules.rs  mod.rs
src/solver/graph/: diluted_lattice.rs  erdos_renyi.rs  grid_n_d.rs
src/solver/ips_rules/: contact_process.rs  si_process.rs  sir_process.rs  three_voter_process.rs  two_si_model.rs  two_si_process.rs  two_voter_process.rs  voter_process.rs
src/visualization/: mod.rs
