[package]
name = "rust_particle_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
image = "0.24.6"
clap = {version = "4.0", features = ["derive"]}

[profile.release]
debug = true # for profiling
